# CE-357

./: main.py
CE-357/: main.py
flow/: baseline_macro_placement.def  custom_macro_placement.def  placement_diff.txt  print_pin_bboxes.tcl
flow/scripts/: floorplan.tcl  macro_place_util.tcl  macro_place_util.tcl.save  variables.mk
tools/OpenROAD/src/: CMakeLists.txt  OpenRoad.cc  compare_macro_positions.py
tools/OpenROAD/src/MacroPlacer/: CMakeLists.txt  MacroPlacer.cpp  MacroPlacer.h  MacroPlacerCmd.cpp  MacroPlacerPlugin.cpp
